apps/production/tandoor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tandoor
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - secretName: wildcard-ronaldlokers-nl-tls
      hosts:
        - tandoor.ronaldlokers.nl
  rules:
    - host: tandoor.ronaldlokers.nl
      http:
        paths:
          - backend:
              service:
                name: tandoor
                port:
                  number: 80
            path: /
            pathType: Prefix
